--- a/base.html
+++ b/base.html
@@ -44,12 +44,21 @@
                 <h1>Add your Checklist</h1>
 
             <div class="row">
+
                 <!-- Input Field and Add Button-->
                 <div class="col-md-12">
                     <input type="text" id="todoInput" value=""> 
                     <button type="button" class="btn btn-primary" onclick="addItem()" id="addButton">Add</button>
-                    <button type="button" class="btn btn-primary" onclick="clearList()" id="clearButton">Clear</button></div> <!-- end col-md -12 -->
-            </div>
+                    <button type="button" class="btn btn-primary" onclick="clearList()" id="clearButton">Clear</button>
+                </div> <!-- end col-md -12 -->
+
+                <!-- List view section-->
+                <div class="col-md-12" id="listItems">
+                    <ul id="myUl"> </ul>
+                </div>
+
+
+            </div> <!-- END row-->
 
             </div> <!-- END Back section-->
 
