body css and background image

--- a/base.html
+++ b/base.html
@@ -29,7 +29,6 @@
         <!--Flipped section-->
         <div class="flipped">
 
-
             <!-- Front Side of Flipper-->
             <div class="front">
                 <h1>ToDo-List</h1>
@@ -55,7 +54,7 @@
                 <!-- List view section-->
                 <div class="col-md-12" id="listItems">
                     <ul id="myUl"> </ul>
-                </div>
+                </div> <!-- END list view section-->
 
 
             </div> <!-- END row-->
