elements positions improved

--- a/base.html
+++ b/base.html
@@ -31,7 +31,7 @@
 
             <!-- Front Side of Flipper-->
             <div class="front">
-                <h1>ToDo-List</h1>
+                <h1>To-Do-List</h1>
                     <!-- ICONS -->
                     <i class="fa fa-pencil fa-4x" aria-hidden="true"></i>
                     <i class="fa fa-list fa-4x" aria-hidden="true"></i>
@@ -40,7 +40,7 @@
 
             <!-- Back side of Flipper-->
             <div class="back">
-                <h1>Add your Checklist</h1>
+                <h1>ADD TASK</h1>
 
             <div class="row">
 
