--- a/base.html
+++ b/base.html
@@ -11,11 +11,9 @@
     <meta name="author" content="Edex01">
     <title>ToDo List</title>
 
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Font Awesome icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
     <!-- Custom CSS -->
      <link href="css/style.css" rel="stylesheet">
 
@@ -33,9 +31,9 @@
             <div class="front">
                 <h1>To-Do-List</h1>
                     <!-- ICONS -->
-                    <i class="fa fa-pencil fa-4x" aria-hidden="true"></i>
-                    <i class="fa fa-list fa-4x" aria-hidden="true"></i>
-                    <i class="fa fa-coffee fa-4x" aria-hidden="true"></i>
+                    <i class='fas fa-book-reader' style='font-size:90px;color:red'></i>
+                    <i class='fas fa-clipboard-list' style='font-size:110px;color:black'></i>
+                    <i class='fas fa-shopping-cart' style='font-size:90px;color:red'></i>
             </div> <!-- END front section-->
 
             <!-- Back side of Flipper-->
@@ -63,6 +61,10 @@
         </div> <!-- END flipped section-->
 
     </div> <!-- END main-container -->
+
+
+        <!-- custom JavaScript -->
+        <script src="js/main.js"></script>
 
 </body>
 
