clear function added

--- a/base.html
+++ b/base.html
@@ -64,6 +64,7 @@
 
         <!-- custom JavaScript -->
         <script src="js/main.js"></script>
+        <script src="js/tether.min.js"></script>
 
 </body>
 
