--- a/base.html
+++ b/base.html
@@ -49,7 +49,7 @@
           <div class="row">
             <!-- Input Field and Add Button-->
             <div class="col-md-12">
-              <input type="text" id="todoInput" value="" />
+              <input type="text" id="todoInput" />
               <button type="button" class="btn btn-primary" id="addButton">
                 Add
               </button>
