History Button added

--- a/base.html
+++ b/base.html
@@ -19,6 +19,9 @@
   </head>
 
   <body>
+    <button type="button" class="btn btn-primary" id="HistoryButton">
+      History
+    </button>
     <!-- Creating main container-->
     <div class="flip-container" id="main-container">
       <!--Flipped section-->
@@ -45,7 +48,7 @@
         <!-- Back side of Flipper-->
         <div class="back">
           <h1>ADD TASK</h1>
-
+          
           <div class="row">
             <!-- Input Field and Add Button-->
             <div class="col-md-12">
