--- a/base.html
+++ b/base.html
@@ -22,6 +22,9 @@
     <button type="button" class="btn btn-primary" id="HistoryButton">
       History
     </button>
+    <button type="button" class="btn btn-primary" id="ClearHistory">
+      Clear History
+    </button>
     <!-- Creating main container-->
     <div class="flip-container" id="main-container">
       <!--Flipped section-->
